--- a/_tmp/style.css
+++ b/_tmp/style.css
@@ -1,4 +1,4 @@
-/*! tailwindcss v2.2.7 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v2.2.19 | MIT License | https://tailwindcss.com */
 
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 
@@ -212,6 +212,11 @@ button,
 Remove the inner border and padding in Firefox.
 */
 
+::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
 /**
 Restore the focus styles unset by the previous rule.
 */
@@ -241,6 +246,11 @@ progress {
 Correct the cursor style of increment and decrement buttons in Safari.
 */
 
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
+  height: auto;
+}
+
 /**
 1. Correct the odd appearance in Chrome and Safari.
 2. Correct the outline style in Safari.
@@ -255,10 +265,19 @@ Correct the cursor style of increment and decrement buttons in Safari.
 Remove the inner padding in Chrome and Safari on macOS.
 */
 
+::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
 /**
 1. Correct the inability to style clickable types in iOS and Safari.
 2. Change font properties to 'inherit' in Safari.
 */
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}
 
 /*
 Interactive
@@ -408,11 +427,6 @@ input::-moz-placeholder, textarea::-moz-placeholder {
   color: #9ca3af;
 }
 
-input:-ms-input-placeholder, textarea:-ms-input-placeholder {
-  opacity: 1;
-  color: #9ca3af;
-}
-
 input::placeholder,
 textarea::placeholder {
   opacity: 1;
@@ -422,6 +436,14 @@ textarea::placeholder {
 button {
   cursor: pointer;
 }
+
+/**
+ * Override legacy focus reset from Normalize with modern Firefox focus styles.
+ *
+ * This is actually an improvement over the new defaults in Firefox in our testing,
+ * as it triggers the better focus styles even for links, which still use a dotted
+ * outline in Firefox by default.
+ */
 
 table {
   border-collapse: collapse;
@@ -576,14 +598,17 @@ input::-moz-placeholder, textarea::-moz-placeholder {
   opacity: 1;
 }
 
-input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+input::placeholder, textarea::placeholder {
   color: #6b7280;
   opacity: 1;
 }
 
-input::placeholder, textarea::placeholder {
-  color: #6b7280;
-  opacity: 1;
+::-webkit-datetime-edit-fields-wrapper {
+  padding: 0;
+}
+
+::-webkit-date-and-time-value {
+  min-height: 1.5em;
 }
 
 select {
@@ -669,6 +694,42 @@ blockquote {
   padding: 1rem;
 }
 
+.callout {
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 251, 235, var(--tw-bg-opacity));
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.dark .callout, .dark .callout strong, .dark .callout em {
+  --tw-bg-opacity: 1;
+  background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgba(17, 24, 39, var(--tw-text-opacity));
+}
+
+.callout-green {
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgba(236, 253, 245, var(--tw-bg-opacity));
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.dark .callout-green, .dark .callout-green strong, .dark .callout-green em {
+  --tw-bg-opacity: 1;
+  background-color: rgba(6, 78, 59, var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgba(229, 231, 235, var(--tw-text-opacity));
+}
+
 /* Overrides for nav/Table of Contents block */
 
 nav ul {
@@ -750,17 +811,45 @@ nav ul li a.active {
   color: rgba(156, 163, 175, var(--tw-text-opacity));
 }
 
+.container {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
 .prose {
   color: #374151;
   max-width: 100%;
-}
-
-.prose [class~="lead"] {
-  color: #4b5563;
-  font-size: 1.25em;
-  line-height: 1.6;
-  margin-top: 1.2em;
-  margin-bottom: 1.2em;
 }
 
 .prose a {
@@ -1106,13 +1195,6 @@ nav ul li a.active {
   margin-bottom: 1.1428571em;
 }
 
-.prose-sm [class~="lead"] {
-  font-size: 1.2857143em;
-  line-height: 1.5555556;
-  margin-top: 0.8888889em;
-  margin-bottom: 0.8888889em;
-}
-
 .prose-sm blockquote {
   margin-top: 1.3333333em;
   margin-bottom: 1.3333333em;
@@ -1376,10 +1458,6 @@ nav ul li a.active {
   clear: right !important;
 }
 
-.m-0 {
-  margin: 0px !important;
-}
-
 .mx-auto {
   margin-left: auto !important;
   margin-right: auto !important;
@@ -1445,16 +1523,16 @@ nav ul li a.active {
   margin-left: 0px !important;
 }
 
-.ml-2 {
-  margin-left: 0.5rem !important;
+.ml-1 {
+  margin-left: 0.25rem !important;
 }
 
 .block {
   display: block !important;
 }
 
-.inline-block {
-  display: inline-block !important;
+.inline {
+  display: inline !important;
 }
 
 .flex {
@@ -1489,16 +1567,8 @@ nav ul li a.active {
   width: 1.5rem !important;
 }
 
-.w-60 {
-  width: 15rem !important;
-}
-
 .w-64 {
   width: 16rem !important;
-}
-
-.w-auto {
-  width: auto !important;
 }
 
 .w-full {
@@ -1511,6 +1581,10 @@ nav ul li a.active {
 
 .flex-none {
   flex: none !important;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0 !important;
 }
 
 .flex-grow {
@@ -1528,22 +1602,13 @@ nav ul li a.active {
   transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
 }
 
-@-webkit-keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
+.rotate-180 {
+  --tw-rotate: 180deg !important;
 }
 
 @keyframes spin {
   to {
     transform: rotate(360deg);
-  }
-}
-
-@-webkit-keyframes ping {
-  75%, 100% {
-    transform: scale(2);
-    opacity: 0;
   }
 }
 
@@ -1554,58 +1619,26 @@ nav ul li a.active {
   }
 }
 
-@-webkit-keyframes pulse {
-  50% {
-    opacity: .5;
-  }
-}
-
 @keyframes pulse {
   50% {
     opacity: .5;
   }
 }
 
-@-webkit-keyframes bounce {
-  0%, 100% {
-    transform: translateY(-25%);
-    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
-            animation-timing-function: cubic-bezier(0.8,0,1,1);
-  }
-
-  50% {
-    transform: none;
-    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
-            animation-timing-function: cubic-bezier(0,0,0.2,1);
-  }
-}
-
 @keyframes bounce {
   0%, 100% {
     transform: translateY(-25%);
-    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
-            animation-timing-function: cubic-bezier(0.8,0,1,1);
+    animation-timing-function: cubic-bezier(0.8,0,1,1);
   }
 
   50% {
     transform: none;
-    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
-            animation-timing-function: cubic-bezier(0,0,0.2,1);
+    animation-timing-function: cubic-bezier(0,0,0.2,1);
   }
-}
-
-.cursor-pointer {
-  cursor: pointer !important;
 }
 
 .list-none {
   list-style-type: none !important;
-}
-
-.appearance-none {
-  -webkit-appearance: none !important;
-     -moz-appearance: none !important;
-          appearance: none !important;
 }
 
 .flex-row-reverse {
@@ -1640,17 +1673,6 @@ nav ul li a.active {
   --tw-space-y-reverse: 0 !important;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse))) !important;
   margin-bottom: calc(1rem * var(--tw-space-y-reverse)) !important;
-}
-
-.divide-y > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-y-reverse: 0 !important;
-  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse))) !important;
-  border-bottom-width: calc(1px * var(--tw-divide-y-reverse)) !important;
-}
-
-.divide-gray-300 > :not([hidden]) ~ :not([hidden]) {
-  --tw-divide-opacity: 1 !important;
-  border-color: rgba(209, 213, 219, var(--tw-divide-opacity)) !important;
 }
 
 .self-center {
@@ -1704,11 +1726,6 @@ nav ul li a.active {
   border-color: rgba(31, 41, 55, var(--tw-border-opacity)) !important;
 }
 
-.dark .dark\:border-gray-700 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgba(55, 65, 81, var(--tw-border-opacity)) !important;
-}
-
 .dark .dark\:border-gray-800 {
   --tw-border-opacity: 1 !important;
   border-color: rgba(31, 41, 55, var(--tw-border-opacity)) !important;
@@ -1717,11 +1734,6 @@ nav ul li a.active {
 .bg-white {
   --tw-bg-opacity: 1 !important;
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity)) !important;
-}
-
-.bg-gray-50 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgba(249, 250, 251, var(--tw-bg-opacity)) !important;
 }
 
 .bg-gray-100 {
@@ -1734,19 +1746,9 @@ nav ul li a.active {
   background-color: rgba(5, 150, 105, var(--tw-bg-opacity)) !important;
 }
 
-.hover\:bg-gray-200:hover {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgba(229, 231, 235, var(--tw-bg-opacity)) !important;
-}
-
 .hover\:bg-blue-600:hover {
   --tw-bg-opacity: 1 !important;
   background-color: rgba(37, 99, 235, var(--tw-bg-opacity)) !important;
-}
-
-.dark .dark\:bg-gray-200 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgba(229, 231, 235, var(--tw-bg-opacity)) !important;
 }
 
 .dark .dark\:bg-gray-500 {
@@ -1759,18 +1761,9 @@ nav ul li a.active {
   background-color: rgba(55, 65, 81, var(--tw-bg-opacity)) !important;
 }
 
-.dark .dark\:bg-gray-800 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgba(31, 41, 55, var(--tw-bg-opacity)) !important;
-}
-
 .dark .dark\:bg-gray-900 {
   --tw-bg-opacity: 1 !important;
   background-color: rgba(17, 24, 39, var(--tw-bg-opacity)) !important;
-}
-
-.p-0 {
-  padding: 0px !important;
 }
 
 .p-2 {
@@ -1794,11 +1787,6 @@ nav ul li a.active {
   padding-right: 0px !important;
 }
 
-.px-2 {
-  padding-left: 0.5rem !important;
-  padding-right: 0.5rem !important;
-}
-
 .px-3 {
   padding-left: 0.75rem !important;
   padding-right: 0.75rem !important;
@@ -1816,10 +1804,6 @@ nav ul li a.active {
 
 .pt-0 {
   padding-top: 0px !important;
-}
-
-.pt-1 {
-  padding-top: 0.25rem !important;
 }
 
 .pt-4 {
@@ -1842,16 +1826,8 @@ nav ul li a.active {
   padding-right: 1rem !important;
 }
 
-.pb-1 {
-  padding-bottom: 0.25rem !important;
-}
-
 .pl-0 {
   padding-left: 0px !important;
-}
-
-.pl-3 {
-  padding-left: 0.75rem !important;
 }
 
 .pl-4 {
@@ -1894,16 +1870,8 @@ nav ul li a.active {
   text-transform: uppercase !important;
 }
 
-.leading-tight {
-  line-height: 1.25 !important;
-}
-
 .tracking-wide {
   letter-spacing: 0.025em !important;
-}
-
-.text-current {
-  color: currentColor !important;
 }
 
 .text-white {
@@ -1941,9 +1909,9 @@ nav ul li a.active {
   color: rgba(31, 41, 55, var(--tw-text-opacity)) !important;
 }
 
-.hover\:text-yellow-400:hover {
+.hover\:text-gray-900:hover {
   --tw-text-opacity: 1 !important;
-  color: rgba(251, 191, 36, var(--tw-text-opacity)) !important;
+  color: rgba(17, 24, 39, var(--tw-text-opacity)) !important;
 }
 
 .dark .dark\:text-gray-400 {
@@ -1961,37 +1929,12 @@ nav ul li a.active {
   color: rgba(75, 85, 99, var(--tw-text-opacity)) !important;
 }
 
-.dark .dark\:text-yellow-400 {
-  --tw-text-opacity: 1 !important;
-  color: rgba(251, 191, 36, var(--tw-text-opacity)) !important;
-}
-
 .no-underline {
   text-decoration: none !important;
 }
 
-.placeholder-gray-300::-moz-placeholder {
-  --tw-placeholder-opacity: 1 !important;
-  color: rgba(209, 213, 219, var(--tw-placeholder-opacity)) !important;
-}
-
-.placeholder-gray-300:-ms-input-placeholder {
-  --tw-placeholder-opacity: 1 !important;
-  color: rgba(209, 213, 219, var(--tw-placeholder-opacity)) !important;
-}
-
-.placeholder-gray-300::placeholder {
-  --tw-placeholder-opacity: 1 !important;
-  color: rgba(209, 213, 219, var(--tw-placeholder-opacity)) !important;
-}
-
 *, ::before, ::after {
   --tw-shadow: 0 0 #0000;
-}
-
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06) !important;
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 
 .shadow-lg {
@@ -2008,26 +1951,6 @@ nav ul li a.active {
   --tw-ring-shadow: 0 0 #0000;
 }
 
-.focus\:ring-4:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
-}
-
-.focus\:ring-blue-200:focus {
-  --tw-ring-opacity: 1 !important;
-  --tw-ring-color: rgba(191, 219, 254, var(--tw-ring-opacity)) !important;
-}
-
-.dark .dark\:focus\:ring-gray-700:focus {
-  --tw-ring-opacity: 1 !important;
-  --tw-ring-color: rgba(55, 65, 81, var(--tw-ring-opacity)) !important;
-}
-
-.ring-opacity-50 {
-  --tw-ring-opacity: 0.5 !important;
-}
-
 .transition-colors {
   transition-property: background-color, border-color, color, fill, stroke !important;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1) !important;
@@ -2042,14 +1965,6 @@ nav ul li a.active {
   .sm\:prose {
     color: #374151;
     max-width: 100%;
-  }
-
-  .sm\:prose [class~="lead"] {
-    color: #4b5563;
-    font-size: 1.25em;
-    line-height: 1.6;
-    margin-top: 1.2em;
-    margin-bottom: 1.2em;
   }
 
   .sm\:prose a {
@@ -2387,10 +2302,6 @@ nav ul li a.active {
 }
 
 @media (min-width: 768px) {
-  .md\:right-0 {
-    right: 0px !important;
-  }
-
   .md\:mx-auto {
     margin-left: auto !important;
     margin-right: auto !important;
@@ -2476,13 +2387,6 @@ nav ul li a.active {
   .lg\:prose-lg p {
     margin-top: 1.3333333em;
     margin-bottom: 1.3333333em;
-  }
-
-  .lg\:prose-lg [class~="lead"] {
-    font-size: 1.2222222em;
-    line-height: 1.4545455;
-    margin-top: 1.0909091em;
-    margin-bottom: 1.0909091em;
   }
 
   .lg\:prose-lg blockquote {
@@ -2719,13 +2623,6 @@ nav ul li a.active {
   .xl\:prose-xl p {
     margin-top: 1.2em;
     margin-bottom: 1.2em;
-  }
-
-  .xl\:prose-xl [class~="lead"] {
-    font-size: 1.2em;
-    line-height: 1.5;
-    margin-top: 1em;
-    margin-bottom: 1em;
   }
 
   .xl\:prose-xl blockquote {
