Fixed img behavior for tables

--- a/_tmp/style.css
+++ b/_tmp/style.css
@@ -621,20 +621,16 @@ select {
           color-adjust: exact;
 }
 
-/* Set up some default image behavior for nicer images */
+/* Set up some default image behavior for nicer images, mt-2 for proper table alignment */
 
 img {
+  margin-top: 0.5rem !important;
+  margin-bottom: 0.5rem !important;
   width: auto !important;
-  border-width: 2px !important;
+  border-width: 0px !important;
   border-color: transparent !important;
   --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06) !important;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important
-}
-
-img:hover {
-  border-width: 2px;
-  --tw-border-opacity: 1;
-  border-color: rgba(243, 244, 246, var(--tw-border-opacity))
 }
 
 /* Overrides for Tailwind Typography prose class */
@@ -712,24 +708,6 @@ blockquote {
   color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
 
-.callout-green {
-  margin-bottom: 1rem;
-  border-radius: 0.5rem;
-  --tw-bg-opacity: 1;
-  background-color: rgba(236, 253, 245, var(--tw-bg-opacity));
-  padding-left: 2rem;
-  padding-right: 2rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.dark .callout-green, .dark .callout-green strong, .dark .callout-green em {
-  --tw-bg-opacity: 1;
-  background-color: rgba(6, 78, 59, var(--tw-bg-opacity));
-  --tw-text-opacity: 1;
-  color: rgba(229, 231, 235, var(--tw-text-opacity));
-}
-
 /* Overrides for nav/Table of Contents block */
 
 nav ul {
@@ -782,22 +760,11 @@ nav ul li a.active {
 
 /* Utilities and misc */
 
-.adjust  p img, .adjust img, .adjust p iframe, .adjust iframe {
+.adjust  p iframe, .adjust iframe {
   margin-right: auto !important;
   margin-left: auto !important;
   padding: 0.5rem !important;
   --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06) !important;
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important
-}
-
-.adjust  p img:hover, .adjust img:hover {
-  --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
-}
-
-.adjust img.button {
-  width: auto !important;
-  --tw-shadow: 0 0 #0000 !important;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important
 }
 
@@ -809,42 +776,6 @@ nav ul li a.active {
 .dark input {
   --tw-text-opacity: 1;
   color: rgba(156, 163, 175, var(--tw-text-opacity));
-}
-
-.container {
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
 }
 
 .prose {
@@ -1589,6 +1520,10 @@ nav ul li a.active {
 
 .flex-grow {
   flex-grow: 1 !important;
+}
+
+.table-auto {
+  table-layout: auto !important;
 }
 
 .transform {
