--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -3,13 +3,9 @@
 @tailwind utilities;
 
 @layer base {
-  
-  /* Set up some default image behavior for nicer images */
+  /* Set up some default image behavior for nicer images, mt-2 for proper table alignment */
   img {
-    @apply w-auto  shadow-md border-2 border-transparent !important
-  }
-  img:hover {
-    @apply border-2 border-gray-100
+    @apply w-auto shadow-md border-0 mt-2 mb-2 border-transparent !important
   }
   /* Overrides for Tailwind Typography prose class */
   .prose a {
@@ -109,14 +105,8 @@
   }
 
 /* Utilities and misc */
-  .adjust  p img, .adjust img, .adjust p iframe, .adjust iframe, .twitter-tweet {
+  .adjust  p iframe, .adjust iframe, .twitter-tweet {
     @apply shadow-md ml-auto mr-auto  p-2 !important
-  }
-  .adjust  p img:hover, .adjust img:hover {
-    @apply shadow-xl  
-  }
-  .adjust img.button {
-    @apply w-auto  shadow-none !important
   }
   .text-align-center {
     @apply flex justify-center; 
